...
                android:scaleType="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/emoji_people"
                android:contentDescription="@string/emoji" />

            <com.vanniktech.emoji.EmojiEditText
                android:id="@+id/etText"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences|textMultiLine"
                app:emojiSize="26sp"
...

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/contact_chat_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/separator_gray"
                    android:scrollbars="vertical"
                    android:stackFromBottom="true"
                    android:transcriptMode="normal" />
...
