<resources>
    <string name="splash_footer_text">Please do not trust us.\nIt is not necessary</string>

    <string name="Contacts">Contacts</string>
    <string name="item_image">Item image</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_drop_url" translatable="false">Drop URL</string>
    <string name="contact_public_key">Public key</string>
    <string name="contact_edit">Edit contact</string>
    <string name="contact_new">New contact</string>
...
    <string name="contact_count">%d Contacts</string>
    <string name="contact">Contact</string>
    <string name="message_step_is_needed_or_close_app">%s is required to use Qabel. Are you sure you want close Qabel?</string>
    <string name="chat_message_hint">Enter text</string>
    <string name="refresh">Refresh</string>
    <string name="headline_contact_chat">Chat</string>
    <string name="btn_chat_send">Send</string>
    <string name="cant_send_message">Can\'t send message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_as">Send message as %s</string>

    <string name="ShareToQabelUser">Share</string>
    <string name="fileshare_label_in_chatmessage">Shared file %1</string>
...
