<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.qabel.qabel_platform.fragments.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contact_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

</FrameLayout>
