<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/side_nav_bar"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
              android:gravity="bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="start">

        <ImageView android:layout_width="96dp" android:layout_height="96dp"
                   android:src="@drawable/qabel_logo" android:id="@+id/qabelLogo" />

        <de.qabel.qabelbox.views.TextViewFont android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/textViewSelectedIdentity"
                  android:layout_alignTop="@+id/imageViewExpandIdentity"
                  android:layout_alignBottom="@+id/imageViewExpandIdentity"
                  android:layout_toStartOf="@+id/imageViewExpandIdentity"
                  android:textSize="22dp"
            />

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_arrow_drop_down_black_24dp"
                   android:id="@+id/imageViewExpandIdentity"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>